# KMS

./: README.md  schemas.sql  webhook-events-test.txt
api/: .gitignore  go.mod  main.go
api/domain/: domain.go  github.go  publisher.go  query.go  redis_stream.go  slack.go  storage.go
api/handlers/: codebase.go  github.go  query.go  route.go  routes.go  slack.go  slack_event.go
api/models/: slack_message.go
api/repository/: ingest.go  query.go  redis_publisher.go  redis_stream.go  (+2 more)
doc/: overview.md
nlp/: .gitignore  KMS.ipynb  api.py  generate_mock_data.py  hf_processor.py  main.py  pyproject.toml  query_handler.py  requirements.txt  test_annotation.py  train_ner_model.py
nlp/codebase/: analyzer.py  baseline.py
nlp/engine/: __init__.py  llm.py  ner.py  prompt.py  re.py  schema.py
nlp/migrations/: backfill_embedding.py
nlp/models/: entity.py
nlp/nlp/: main.py  ner.py  query_handler.py  re.py  utils.py
nlp/playbook/: generator.py
nlp/playbooks/: generator.py
nlp/prompts/: entity_extraction.py
nlp/query_engine/: __init__.py  analytics.py  analyzer.py  cache.py  core.py  decay.py  errors.py  retrieval.py  router.py  synthesizer.py
nlp/query_engine/graph/: patterns.py  traverser.py
nlp/query_engine/vector/: retriever.py
nlp/spacy/: annotator.py  nlp.py
nlp/utils/: __init__.py  common.py  db_helpers.py  llm_utils.py  logger.py  redis.py  supabase.py
nlp/visualizer/: service.py
nlp/worker/: baseline.py  consumer.py  ingestion.py  processor.py  query.py
schema/: embeddings.sql  graph_traverser_rpc.sql  schemas.sql  vector_search_rpc.sql
(+10 files in other folders)
