[project]
name = "nlp"
version = "0.1.0"
description = "AI-powered knowledge oracle for SaaS/fintech teams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-huggingface>=0.3.1",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "retry>=0.9.2",
    "supabase>=2.18.1",
    "transformers>=4.57.0",
]
