[project]
name = "nlp"
version = "0.1.0"
description = "AI-powered knowledge oracle for SaaS/fintech teams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.7.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "redis==5.0.8",
    "sentence-transformers>=5.1.2",
    "supabase>=2.24.0",
]
